@@ -26,6 +26,7 @@ anova.gam,coef.pdIdnot,coef.pdTens,
        Predict.matrix.tensor.smooth,
        Predict.matrix.tprs.smooth,
        Predict.matrix.ts.smooth,
+       Predict.matrix.pspline.smooth,
        residuals.gam, s,
        smoothCon,smooth.construct,
        smooth.construct.cc.smooth.spec,
@@ -34,6 +35,8 @@ anova.gam,coef.pdIdnot,coef.pdTens,
        smooth.construct.tensor.smooth.spec,
        smooth.construct.tp.smooth.spec,
        smooth.construct.ts.smooth.spec,
+       smooth.construct.ps.smooth.spec,
+       smooth.construct.ad.smooth.spec,
        summary.gam,
       solve.pdIdnot,
        summary.pdIdnot,summary.pdTens,te,
