@@ -6,6 +6,7 @@
 \alias{Predict.matrix.cs.smooth}
 \alias{Predict.matrix.cyclic.smooth}
 \alias{Predict.matrix.tensor.smooth}
+\alias{Predict.matrix.pspline.smooth}
 %- Also NEED an `\alias' for EACH other topic documented here.
 \title{Prediction methods for smooth terms in a GAM}
 \description{ Takes \code{smooth} objects produced by \code{smooth.construct} methods and obtains the matrix mapping 
